--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -32,10 +32,18 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
-    - name: Test
-      working-directory: ${{github.workspace}}/build
+    #- name: Test
+    #  working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       #run: ctest -C ${{env.BUILD_TYPE}}
-      run: pve-ddns-client
-      
+    #  run: pve-ddns-client
+    
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: ubuntu-artifact
+        path: |
+          ${{github.workspace}}/build/pve-ddns-client
+          ${{github.workspace}}/build/*.so
+          ${{github.workspace}}/build/*.yml
