Add 3rdparty libs building step

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,7 +22,14 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-
+        
+    - name: Prebuild 3rdparty libs
+      run: |
+        # make file runnable, might not be necessary
+        chmod +x "${GITHUB_WORKSPACE}/3rdparty/build.sh"
+        # run script
+        "${GITHUB_WORKSPACE}/3rdparty/build.sh"
+    
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
