--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,13 +22,21 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-        
+    
+    - name: Check 3rdparty prebuilt cache
+      id: cache
+      uses: actions/cache@v2
+      with:
+        path: ${GITHUB_WORKSPACE}/3rdparty/prebuilt
+        key: ${{ runner.os }}-build-${{ hashFiles('${GITHUB_WORKSPACE}/3rdparty/build.sh') }}
+    
     - name: Prebuild 3rdparty libs
       run: |
         # make file runnable, might not be necessary
         chmod +x "${GITHUB_WORKSPACE}/3rdparty/build.sh"
         # run script
         "${GITHUB_WORKSPACE}/3rdparty/build.sh"
+      if: steps.cache.outputs.cache-hit != 'true'
     
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
