Update cache path

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,7 +27,7 @@ jobs:
       id: cache
       uses: actions/cache@v2
       with:
-        path: ${GITHUB_WORKSPACE}/3rdparty/prebuilt
+        path: 3rdparty/prebuilt
         key: ${{ runner.os }}-build-${{ hashFiles('3rdparty/build.sh') }}
     
     - name: Prebuild 3rdparty libs
