Try to fix CI link errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,8 @@ add_executable(${PROJECT_NAME} ${SOURCES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE "3rdparty/cmdline" "3rdparty/prebuilt/include")
 target_link_directories(${PROJECT_NAME} PRIVATE "3rdparty/prebuilt/lib" "3rdparty/prebuilt/lib64")
-target_link_libraries(curl PRIVATE crypto ssl)
-target_link_libraries(${PROJECT_NAME} PRIVATE pthread glog curl yaml-cpp)
+set(LINK_LIBS "curl pthread glog crypto ssl yaml-cpp")
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LINK_LIBS} ${LINK_LIBS})
 #target_link_libraries(${PROJECT_NAME} PRIVATE glogd yaml-cppd libcurl-d wldap32 crypt32 Ws2_32)
 
 add_custom_command(
