--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,25 @@ message("CMake version: " ${CMAKE_VERSION})
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+add_definitions(-DFMT_HEADER_ONLY)
 add_definitions(-DCURL_STATICLIB)
-#add_definitions(-DHAVE_SNPRINTF)
+if(WIN32)
+    add_definitions(-DHAVE_SNPRINTF)
+endif()
 
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.cc")
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_include_directories(${PROJECT_NAME} PRIVATE "3rdparty/cmdline" "3rdparty/prebuilt/include")
+target_include_directories(${PROJECT_NAME} PRIVATE
+        "3rdparty/cmdline" "3rdparty/fmt/include" "3rdparty/prebuilt/include")
 target_link_directories(${PROJECT_NAME} PRIVATE "3rdparty/prebuilt/lib" "3rdparty/prebuilt/lib64")
-target_link_libraries(${PROJECT_NAME} PRIVATE curl glog yaml-cpp ssl crypto z pthread dl)
-#target_link_libraries(${PROJECT_NAME} PRIVATE libcurl-d glogd yaml-cppd wldap32 crypt32 Ws2_32)
+if(WIN32)
+    target_link_libraries(${PROJECT_NAME} PRIVATE libcurl-d glogd yaml-cppd wldap32 crypt32 Ws2_32)
+else()
+    target_link_libraries(${PROJECT_NAME} PRIVATE curl glog yaml-cpp ssl crypto z pthread dl)
+endif()
+
 
 add_custom_command(
         TARGET ${PROJECT_NAME}
