--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -28,7 +28,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: 3rdparty/prebuilt
-        key: ${{ runner.os }}-build-${{ hashFiles('3rdparty/build.sh') }}
+        key: ${{ runner.os }}-ubuntu-18.04-build-${{ hashFiles('3rdparty/build.sh') }}
     
     - name: Prebuild 3rdparty libs
       run: |
