--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -16,7 +16,10 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-18.04
+    strategy:
+      matrix:
+        platform: [ubuntu-18.04, macos-latest]
+    runs-on: ${{ matrix.platform }}
 
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +31,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: 3rdparty/prebuilt
-        key: ${{ runner.os }}-ubuntu-18.04-build-${{ hashFiles('3rdparty/build.sh') }}
+        key: ${{ runner.os }}-${{ matrix.platform }}-build-${{ hashFiles('3rdparty/build.sh') }}
     
     - name: Prebuild 3rdparty libs
       run: |
@@ -57,7 +60,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: ubuntu-artifact
+        name: ${{ runner.os }}-artifact
         path: |
           ${{github.workspace}}/build/pve-ddns-client
           ${{github.workspace}}/build/*.yml
