Test windows CI

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -52,7 +52,7 @@ jobs:
       
     - name: Prebuild 3rdparty libs (Windows)
       run: |
-        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+        cmd /k "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
         .\build.bat
       working-directory: .\3rdparty
       if: runner.os == 'Windows' && steps.cache-win.outputs.cache-hit != 'true'
