--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -88,5 +88,5 @@ jobs:
         name: ${{ runner.os }}-artifact
         path: |
           ${{github.workspace}}\build\${{env.BUILD_TYPE}}\pve-ddns-client.exe
-          ${{github.workspace}}build\*.yml
+          ${{github.workspace}}\build\*.yml
       if: runner.os == 'Windows'
