Add build_debug.bat for windows debug dev env

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,12 +39,17 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/3rdparty/prebuilt/lib64)
 endif()
 target_link_directories(${PROJECT_NAME} PRIVATE ${LINK_DIRS})
 if(WIN32)
-    target_link_libraries(${PROJECT_NAME} PRIVATE libcurl glog yaml-cpp wldap32 crypt32 Ws2_32)
+    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        target_link_libraries(${PROJECT_NAME} PRIVATE libcurl-d glogd yaml-cppd)
+    else()
+        target_link_libraries(${PROJECT_NAME} PRIVATE libcurl glog yaml-cpp)
+    endif()
+    target_link_libraries(${PROJECT_NAME} PRIVATE wldap32 crypt32 Ws2_32)
     set_property(TARGET ${PROJECT_NAME} PROPERTY
         MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 elseif(APPLE)
     target_link_libraries(${PROJECT_NAME} PRIVATE curl glog yaml-cpp ssl crypto z pthread dl
-                                                  ${LIB_FOUNDATION} ${LIB_SYSTEMCONFIGURATION})
+        ${LIB_FOUNDATION} ${LIB_SYSTEMCONFIGURATION})
 else()
     target_link_libraries(${PROJECT_NAME} PRIVATE curl glog yaml-cpp ssl crypto z pthread dl)
 endif()
