Move version string to preprocessor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_definitions(-DCURL_STATICLIB)
 if(WIN32)
     add_definitions(-DHAVE_SNPRINTF)
 endif()
+if(DEFINED PVE_DDNS_CLIENT_VER)
+    add_definitions(-DPVE_DDNS_CLIENT_VER="${PVE_DDNS_CLIENT_VER}")
+endif()
 
 if(APPLE)
     find_library(LIB_FOUNDATION Foundation)
