--- a/res/pve-ddns-client.yml
+++ b/res/pve-ddns-client.yml
@@ -1,6 +1,9 @@
 general:
   update-interval-ms: 300000
   log-overdue-days: 3
+  log-buf-secs: 2
+  max-log-size-mb: 2
+  service-mode: true
   public-ip:
     service: porkbun
     credentials: pk1_,sk1_
