Test mips workflow

--- a/.github/workflows/cmake-mips.yml
+++ b/.github/workflows/cmake-mips.yml
@@ -33,8 +33,8 @@ jobs:
           echo 'CXX=mipsel-openwrt-linux-uclibc-g++' >> $GITHUB_ENV
           echo 'RANLIB=mipsel-openwrt-linux-uclibc-ranlib' >> $GITHUB_ENV
           echo 'STAGING_DIR=/home/admin/openwrt/OpenWrt-SDK-ramips-for-linux-x86_64-gcc-4.8-linaro_uClibc-0.9.33.2/staging_dir' >> $GITHUB_ENV
-          echo 'CFLAGS="-Os -s"' >> $GITHUB_ENV
-          echo 'CXXFLAGS="-Os -s"' >> $GITHUB_ENV
+          echo 'CFLAGS=-Os -s' >> $GITHUB_ENV
+          echo 'CXXFLAGS=-Os -s' >> $GITHUB_ENV
         if: github.event.inputs.model == 'k2p'
 
       - name: Check 3rdparty prebuilt cache
