--- a/res/pve-ddns-client.yml
+++ b/res/pve-ddns-client.yml
@@ -6,7 +6,7 @@ general:
   service-mode: true
   public-ip:
     service: porkbun
-    credentials: pk1_,sk1_
+    credentials: api_key,secret_key
   pve-api:
     host: https://pve.domain.com:8006
     user: root
@@ -15,32 +15,29 @@ general:
     token-uuid: uuid
   sync_host_static_v6_address: false
 client:
-  dns: porkbun
-  api-key: pk1_
-  api-secret: sk1_
-  ipv4: ["xxx.xxx.xxx", "aaa.xxx.xxx"]
-  ipv6: ["xxx.xxx.xxx", "bbb.xxx.xxx"]
+  dns: dnspod
+  credentials: token_id,token
+  ipv4: ["v4sub1.domain.com", "v4sub2.domain.com"]
+  ipv6: ["v6sub1.domain.com", "v6sub2.domain.com"]
 host:
   node: node
   iface: vmbr0
   dns: porkbun
-  api-key: pk1_
-  api-secret: sk1_
-  ipv4: ["sub1.domain.com", "sub2.domain.com"]
-  ipv6: ["sub3.domain.com", "sub.domain.net"]
+  credentials: api_key,secret_key
+  ipv4: ["v4sub1.domain.com", "v4sub2.domain.com"]
+  ipv6: ["v6sub1.domain.com", "v6sub2.domain.com"]
 guests:
   - node: node
     vmid: 100
     iface: ens18
-    api-key: pk1_
-    api-secret: sk1_
-    ipv4: ["sub4.domain.com", "sub5.domain.com"]
-    ipv6: ["sub6.domain.com", "sub2.domain.net"]
+    dns: porkbun
+    credentials: api_key,secret_key
+    ipv4: ["v4sub1.domain.com", "v4sub2.domain.com"]
+    ipv6: ["v6sub1.domain.com", "v6sub2.domain.com"]
   - node: node
     vmid: 101
     iface: ens18
     dns: porkbun
-    api-key: pk1_
-    api-secret: sk1_
-    ipv4: ["sub7.domain.com", "sub8.domain.com"]
-    ipv6: ["sub9.domain.com", "sub3.domain.net"]
+    credentials: api_key,secret_key
+    ipv4: ["v4sub1.domain.com", "v4sub2.domain.com"]
+    ipv6: ["v6sub1.domain.com", "v6sub2.domain.com"]
