--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -29,9 +29,7 @@ jobs:
 
     - name: Set short git commit SHA
       id: vars
-      run: |
-        calculatedSha=$(git rev-parse --short ${{ github.sha }})
-        echo "COMMIT_SHORT_SHA=$calculatedSha" >> $GITHUB_ENV    
+      run: echo "COMMIT_SHORT_SHA=$(git rev-parse --short ${{ github.sha }})" >> $GITHUB_ENV   
     
     - name: Check 3rdparty prebuilt cache (Linux & macOS)
       id: cache-nix
